--- a/GT_App/Views/Course/Details.cshtml
+++ b/GT_App/Views/Course/Details.cshtml
@@ -10,17 +10,45 @@
     <legend>Course</legend>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Facility.Facility_Name)
+         @Html.DisplayNameFor(model => model.Facility.Name)
     </div>
     <div class="display-field">
-        @Html.DisplayFor(model => model.Facility.Facility_Name)
+        @Html.DisplayFor(model => model.Facility.Name)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Course_Name)
+         @Html.DisplayNameFor(model => model.Name)
     </div>
     <div class="display-field">
-        @Html.DisplayFor(model => model.Course_Name)
+        @Html.DisplayFor(model => model.Name)
+    </div>
+
+    <div class="display-label">
+         @Html.DisplayNameFor(model => model.Tees)
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.Tees)
+    </div>
+
+    <div class="display-label">
+         @Html.DisplayNameFor(model => model.Slope)
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.Slope)
+    </div>
+
+    <div class="display-label">
+         @Html.DisplayNameFor(model => model.Rating)
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.Rating)
+    </div>
+
+    <div class="display-label">
+         @Html.DisplayNameFor(model => model.Yardage)
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.Yardage)
     </div>
 </fieldset>
 <p>
