--- a/GT_App/Views/Course/Edit.cshtml
+++ b/GT_App/Views/Course/Edit.cshtml
@@ -7,6 +7,7 @@
 <h2>Edit</h2>
 
 @using (Html.BeginForm()) {
+    @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
     <fieldset>
@@ -23,11 +24,43 @@
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Course_Name)
+            @Html.LabelFor(model => model.Name)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Course_Name)
-            @Html.ValidationMessageFor(model => model.Course_Name)
+            @Html.EditorFor(model => model.Name)
+            @Html.ValidationMessageFor(model => model.Name)
+        </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Tees)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Tees)
+            @Html.ValidationMessageFor(model => model.Tees)
+        </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Slope)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Slope)
+            @Html.ValidationMessageFor(model => model.Slope)
+        </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Rating)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Rating)
+            @Html.ValidationMessageFor(model => model.Rating)
+        </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Yardage)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Yardage)
+            @Html.ValidationMessageFor(model => model.Yardage)
         </div>
 
         <p>
