--- a/GT_App/Views/Course/Index.cshtml
+++ b/GT_App/Views/Course/Index.cshtml
@@ -7,18 +7,27 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New Course", "Create")
-</p>
-<p>
-    @Html.ActionLink("Create New Tee Type", "Create", "TeeType")
+    @Html.ActionLink("Create New", "Create")
 </p>
 <table>
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Facility.Facility_Name)
+            @Html.DisplayNameFor(model => model.Facility.Name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Course_Name)
+            @Html.DisplayNameFor(model => model.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Tees)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Slope)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Rating)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Yardage)
         </th>
         <th></th>
     </tr>
@@ -26,10 +35,22 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Facility.Facility_Name)
+            @Html.DisplayFor(modelItem => item.Facility.Name)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Course_Name)
+            @Html.DisplayFor(modelItem => item.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Tees)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Slope)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Rating)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Yardage)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.CourseId }) |
