--- a/GT_App/Views/Facility/Index.cshtml
+++ b/GT_App/Views/Facility/Index.cshtml
@@ -7,31 +7,12 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New Facility", "Create")
+    @Html.ActionLink("Create New", "Create")
 </p>
-<p>
-    @Html.ActionLink("Create New Course", "Create","Course")
-</p>
-
 <table>
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Facility_Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Address)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.City)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.State)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Zip)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Phone)
+            @Html.DisplayNameFor(model => model.Name)
         </th>
         <th></th>
     </tr>
@@ -39,22 +20,7 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Facility_Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Address)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.City)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.State)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Zip)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Phone)
+            @Html.DisplayFor(modelItem => item.Name)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.FacilityId }) |
