--- a/GT_App/Views/Hole/Delete.cshtml
+++ b/GT_App/Views/Hole/Delete.cshtml
@@ -18,24 +18,17 @@
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.CourseId)
+         @Html.DisplayNameFor(model => model.Course.Name)
     </div>
     <div class="display-field">
-        @Html.DisplayFor(model => model.CourseId)
+        @Html.DisplayFor(model => model.Course.Name)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.TeeType.Name)
+         @Html.DisplayNameFor(model => model.Number)
     </div>
     <div class="display-field">
-        @Html.DisplayFor(model => model.TeeType.Name)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Hole_Num)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Hole_Num)
+        @Html.DisplayFor(model => model.Number)
     </div>
 
     <div class="display-label">
@@ -60,6 +53,7 @@
     </div>
 </fieldset>
 @using (Html.BeginForm()) {
+    @Html.AntiForgeryToken()
     <p>
         <input type="submit" value="Delete" /> |
         @Html.ActionLink("Back to List", "Index")
