--- a/GT_App/Views/Hole/Details.cshtml
+++ b/GT_App/Views/Hole/Details.cshtml
@@ -17,24 +17,17 @@
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.CourseId)
+         @Html.DisplayNameFor(model => model.Course.Name)
     </div>
     <div class="display-field">
-        @Html.DisplayFor(model => model.CourseId)
+        @Html.DisplayFor(model => model.Course.Name)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.TeeType.Name)
+         @Html.DisplayNameFor(model => model.Number)
     </div>
     <div class="display-field">
-        @Html.DisplayFor(model => model.TeeType.Name)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Hole_Num)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Hole_Num)
+        @Html.DisplayFor(model => model.Number)
     </div>
 
     <div class="display-label">
