--- a/GT_App/Views/Round/Delete.cshtml
+++ b/GT_App/Views/Round/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model GT_App.Models.TeeType
+﻿@model GT_App.Models.Round
 
 @{
     ViewBag.Title = "Delete";
@@ -8,7 +8,14 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <fieldset>
-    <legend>TeeType</legend>
+    <legend>Round</legend>
+
+    <div class="display-label">
+         @Html.DisplayNameFor(model => model.GolferId)
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.GolferId)
+    </div>
 
     <div class="display-label">
          @Html.DisplayNameFor(model => model.FacilityId)
@@ -25,34 +32,42 @@
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Name)
+         @Html.DisplayNameFor(model => model.Date)
     </div>
     <div class="display-field">
-        @Html.DisplayFor(model => model.Name)
+        @Html.DisplayFor(model => model.Date)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Slope)
+         @Html.DisplayNameFor(model => model.Is_Official)
     </div>
     <div class="display-field">
-        @Html.DisplayFor(model => model.Slope)
+        @Html.DisplayFor(model => model.Is_Official)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Rating)
+         @Html.DisplayNameFor(model => model.Number_Of_Holes)
     </div>
     <div class="display-field">
-        @Html.DisplayFor(model => model.Rating)
+        @Html.DisplayFor(model => model.Number_Of_Holes)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Gender)
+         @Html.DisplayNameFor(model => model.HBH_Stats)
     </div>
     <div class="display-field">
-        @Html.DisplayFor(model => model.Gender)
+        @Html.DisplayFor(model => model.HBH_Stats)
+    </div>
+
+    <div class="display-label">
+         @Html.DisplayNameFor(model => model.TotalScore)
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.TotalScore)
     </div>
 </fieldset>
 @using (Html.BeginForm()) {
+    @Html.AntiForgeryToken()
     <p>
         <input type="submit" value="Delete" /> |
         @Html.ActionLink("Back to List", "Index")
