--- a/GT_App/Views/RoundDetail/Details.cshtml
+++ b/GT_App/Views/RoundDetail/Details.cshtml
@@ -10,59 +10,17 @@
     <legend>RoundDetail</legend>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.RoundId)
+         @Html.DisplayNameFor(model => model.Round.RoundId)
     </div>
     <div class="display-field">
-        @Html.DisplayFor(model => model.RoundId)
+        @Html.DisplayFor(model => model.Round.RoundId)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Golfer.First_Name)
+         @Html.DisplayNameFor(model => model.HoleId)
     </div>
     <div class="display-field">
-        @Html.DisplayFor(model => model.Golfer.First_Name)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Facility.Facility_Name)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Facility.Facility_Name)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Course.Course_Name)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Course.Course_Name)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.TeeType.Name)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.TeeType.Name)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Hole.HoleId)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Hole.HoleId)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Differential)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Differential)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Date)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Date)
+        @Html.DisplayFor(model => model.HoleId)
     </div>
 
     <div class="display-label">
@@ -92,50 +50,8 @@
     <div class="display-field">
         @Html.DisplayFor(model => model.FIR)
     </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Up_And_Down)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Up_And_Down)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Par_Save)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Par_Save)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Sand_Save)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Sand_Save)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Driving_Distince)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Driving_Distince)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Proximity)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Proximity)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Green_Fee)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Green_Fee)
-    </div>
 </fieldset>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { /* id=Model.PrimaryKey */ }) |
+    @Html.ActionLink("Edit", "Edit", new { id=Model.RoundDetailId }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
