--- a/GT_App/Views/Shared/_Layout.cshtml
+++ b/GT_App/Views/Shared/_Layout.cshtml
@@ -32,12 +32,12 @@
             $("body nav li").each(function () {
                 if ($(this).find("ul").length > 0) {
 
-                    //show subnav on hover  
+                    //show subnav on hover
                     $(this).mouseenter(function () {
                         $(this).find("ul").stop(true, true).slideDown();
                     });
 
-                    //hide submenus on exit  
+                    //hide submenus on exit
                     $(this).mouseleave(function () {
                         $(this).find("ul").stop(true, true).slideUp();
                     });
@@ -48,10 +48,10 @@
                 }
             });
         });
-    </script>   
+    </script>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    
+
 </head>
 <body>
     <header>
@@ -89,8 +89,7 @@
                             <ul>
                                 <li>@Html.ActionLink("View Facilities", "Index", "Facility")</li>
                                 <li>@Html.ActionLink("View Courses", "Index", "Course")</li>
-                                <li>@Html.ActionLink("View TeeTypes", "Index", "TeeType")</li>
-                                <li>@Html.ActionLink("View Holes", "Index", "TeeType")</li>
+                                <li>@Html.ActionLink("View Holes", "Index", "Hole")</li>
                             </ul>
                         </li>
                         <li>
@@ -131,12 +130,14 @@
         <div class="content-wrapper">
             <div class="float-left">
                 <p>&copy; @DateTime.Now.Year -Acramal Technologies, Inc.</p>
+                <p>FacilityId: @Session["facilityId"]</p>
             </div>
         </div>
     </footer>
 
     @*@Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/jqueryui")*@
+        @Scripts.Render("~/bundles/jqueryui")*@
     @RenderSection("scripts", required: false)
+    <script src="~/js/course.js"></script>
 </body>
 </html>
