--- a/GT_App/Views/Shared/_Layout.cshtml
+++ b/GT_App/Views/Shared/_Layout.cshtml
@@ -130,7 +130,7 @@
         <div class="content-wrapper">
             <div class="float-left">
                 <p>&copy; @DateTime.Now.Year -Acramal Technologies, Inc.</p>
-                <p>FacilityId: @Session["facilityId"]</p>
+                <p>FacilityId: @Session["FacilityId"]</p>
             </div>
         </div>
     </footer>
