Modified session on Course

--- a/GT_App/Views/Shared/_Layout.cshtml
+++ b/GT_App/Views/Shared/_Layout.cshtml
@@ -131,9 +131,9 @@
             <div class="float-left">
                 <p>&copy; @DateTime.Now.Year -Acramal Technologies, Inc.</p>
                 <p>FacilityId: @Session["FacilityId"]</p>
-                <p>FacilityId: @Session["FacilityName"]</p>
-                <p>FacilityId: @Session["CourseId"]</p>
-                <p>FacilityId: @Session["CourseName"]</p>
+                <p>FacilityName: @Session["FacilityName"]</p>
+                <p>CourseId: @Session["CourseId"]</p>
+                <p>CourseName: @Session["CourseName"]</p>
             </div>
         </div>
     </footer>
